# rs-sep5

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  seed_phrase.rs
tests/: tests.rs
